@@ -1,0 +1,23 @@
+<component name="libraryTable">
+  <library name="com.microsoft.azure:adal4j:1.6.4" type="repository">
+    <properties maven-id="com.microsoft.azure:adal4j:1.6.4" />
+    <CLASSES>
+      <root url="jar://$PROJECT_DIR$/lib/adal4j-1.6.4.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/oauth2-oidc-sdk-6.5.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/javax.mail-1.6.1.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/activation-1.1.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/jcip-annotations-1.0-1.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/json-smart-2.3.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/accessors-smart-1.2.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/asm-5.0.4.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/lang-tag-1.4.4.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/nimbus-jose-jwt-8.3.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/gson-2.8.0.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/slf4j-api-1.7.21.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/commons-codec-1.11.jar!/" />
+      <root url="jar://$PROJECT_DIR$/lib/commons-lang3-3.5.jar!/" />
+    </CLASSES>
+    <JAVADOC />
+    <SOURCES />
+  </library>
+</component>
